--- a/src/main/resources/static/config.html
+++ b/src/main/resources/static/config.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>配置</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/w3.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <script src="js/vue.js"></script>
+    <script src="js/axios.js"></script>
 </head>
 <body>
 <header class="w3-container w3-teal w3-center">
     <h1>配置管理</h1>
 </header>
 
-<div class="w3-container">
+<div class="w3-container" id="app">
     <div class="w3-modal-content">
-        <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+        <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width: 600px;">
             <form class="w3-container" action="/config" method="post">
                 <div class="w3-section">
-                    <div th:unless="${msg == null}" class="w3-container w3-red">
-                        <p th:text="${msg}"></p>
+                    <div v-if="msg != ''" class="w3-container w3-red">
+                        <p>{{ msg }}</p>
                     </div>
 
                     <div class="w3-row w3-section">
                         <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-folder"></i></div>
                         <div class="w3-rest">
-                            <input th:value="${store}" class="w3-input w3-border" name="store" type="text" placeholder="报告保存目录">
+                            <input v-model="store" class="w3-input w3-border" name="store" type="text" placeholder="报告保存目录">
                             <label>计算机上用于保存文件的目录，如Windows: D:\Files\，类Unix: /home/nas/</label>
                         </div>
                     </div>
@@ -32,17 +34,17 @@
                     <div class="w3-row w3-section">
                         <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-sitemap"></i></div>
                         <div class="w3-rest">
-                            <input th:value="${address}" class="w3-input w3-border" name="address" type="text" placeholder="网站地址">
+                            <input v-model="address" class="w3-input w3-border" name="address" type="text" placeholder="网站地址">
                             <label>访问本站的地址，如 http://www.example.com、http://192.168.1.2。如果端口不是80，需要带端口号，如 http://www.example.com:8080、http://192.168.1.2:8080</label>
                         </div>
                     </div>
-                    <button class="w3-button w3-block w3-green w3-section w3-padding" type="submit">确定</button>
+                    <a class="w3-button w3-block w3-green w3-section w3-padding" v-on:click="cfg">确定</a>
                 </div>
             </form>
 
         </div>
     </div>
 </div>
-
+<script src="js/config.js"></script>
 </body>
 </html>
